# lakehouse-federation

./: .gitignore  README.md  databricks.yml  lakehouse_federation_demo_resource_deploy.sh  pyproject.toml
notebooks/: federation_demo.sql  federation_demo_aws.sql  federation_demo_azure.sql  federation_demo_interactive.sql  federation_demo_template.sql
scripts/: deploy.py  prerequisites.sh
scripts/deployer/: __init__.py  auth.py  cleanup.py  config.py  connectivity.py  dab.py  databricks.py  notebook.py  orchestrator.py  result.py  state.py  terraform.py
scripts/deployer/sources/: __init__.py  bigquery.py  glue.py  onelake.py  postgres.py  redshift.py  snowflake.py  snowflake_iceberg.py  synapse.py
terraform/: .terraform.lock.hcl  aws_glue.tf  aws_glue_etl.tf  aws_iam.tf  aws_lakeformation.tf  aws_networking.tf  aws_rds_postgres.tf  aws_redshift.tf  aws_redshift_data.tf  aws_s3.tf  azure_catalog_storage.tf  azure_onelake.tf  azure_postgres.tf  azure_resource_group.tf  azure_synapse.tf  databricks_catalog.tf  databricks_connection.tf  databricks_credentials.tf  databricks_external.tf  gcp_bigquery.tf  main.tf  outputs.tf  snowflake_iceberg.tf  snowflake_setup.tf  terraform.tfvars.example  variables.tf
terraform/scripts/: generate_data.py  onelake_upload.py  snowflake_iceberg_setup.py  snowflake_setup.py
terraform/sql/: create_quality_inspections.sql  insert_quality_inspections.sql
terraform/sql/bigquery/: insert_cost_allocation.sql  insert_downtime_records.sql
terraform/sql/postgres/: comments.sql  create_maintenance_logs.sql  create_work_orders.sql  (+2 more)
(+16 files in other folders)
