[project]
name = "lakehouse-federation-demo"
version = "0.1.0"
description = "Databricks Lakehouse Federation multi-cloud demo"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "questionary>=2.0",
    "deltalake>=0.18.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "requests>=2.32.5",
    "snowflake-connector-python>=3.0",
    "boto3>=1.34",
]
